--- a/application.yml
+++ b/application.yml
@@ -74,15 +74,23 @@ chaos:
       repository: false
       rest-controller: false
       service: false
-
+---
+spring:
+  config:
+    activate:
+      on-profile: docker
+  eureka:
+    client:
+      serviceUrl:
+        defaultZone: http://discovery-server:8761/eureka/
 ---
 spring:
   config:
     activate:
       on-profile: mysql
   datasource:
-    url: jdbc:mysql://localhost:3306/petclinic?allowPublicKeyRetrieval=true&useSSL=false
-    username: root
+    url: jdbc:mysql://mysql-service:3306/petclinic?allowPublicKeyRetrieval=true&useSSL=false
+    username: petclinic
     password: petclinic
   sql:
     init:
